--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.45.4",
+    "@tanstack/vue-table": "^8.20.5",
+    "@vueuse/core": "^11.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "iconify-icon": "^2.1.0",
     "lucide-vue-next": "^0.447.0",
     "pinia": "^2.1.7",
     "radix-vue": "^1.9.6",
