--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "supabase": "^1.200.3",
     "tailwindcss": "^3.4.13",
     "typescript": "~5.4.0",
+    "unplugin-auto-import": "^0.18.3",
     "unplugin-vue-router": "^0.10.8",
     "vite": "^5.3.1",
     "vue-tsc": "^2.0.21"
