--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-vue": "^9.23.0",
     "npm-run-all2": "^6.2.0",
     "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "supabase": "^1.200.3",
     "tailwindcss": "^3.4.13",
     "typescript": "~5.4.0",
